Fix content shift

--- a/src/components/RightSection/RightSection.css
+++ b/src/components/RightSection/RightSection.css
@@ -18,6 +18,11 @@
   align-items: center;
   padding: 12px;
   background: #eef3f6;
+  transition: 0.4s ease;
+}
+
+.input-wrapper:focus-within {
+  box-shadow: 0px 3px 22px 0 #c3d2e9;
 }
 
 .input-wrapper svg {
@@ -39,6 +44,10 @@
   color: #c8d2e1;
   font-weight: 500;
   font-size: 16px;
+}
+
+.emoji-meaning-container {
+  height: 50px;
 }
 
 .food-card-grid {
